--- a/curriculo.html
+++ b/curriculo.html
@@ -11,7 +11,7 @@
         <hr>
         <div style="text-align: center;">
             <img src="assents/imagem/1649.jpg">
-        </div>
+</div>
         <hr>
     </section>
     <section>
@@ -27,7 +27,7 @@
     <section>
         <h2 style="text-align: center;">informações de contato</h2>
         <ul>
-            <li style="text-align: center;">Telefone: 67347490</li>
+            <li style="text-align: center;">Telefone: 673474906</li>
             <li style="text-align: center;">email: yviturino5@gmail.com</li>
             <li style="text-align: center;">rua: das ++ 751340 fortaleza-ce</li>
             <hr>
@@ -58,7 +58,7 @@
     </section>
     <section>
         <h3>CONTRATAR</h3>
-    <a href="https://youtu.be/u7UVt-16hOU?si=s5-CieqyWSFhmQTR"
+    <a href="https://youtu.be/Id6i7JP-1bs?si=HGLOvOZCOXFWHS4H"
     target="_blank"
     style="padding: 8px 15px; background-color: rgb(24, 24, 24); color:rgb(162, 0, 255); text-decoration: nome;border-radius 5px ; margin-rigth: 10px; display: inline-block;">CLARINHO QUE SIM</a>
  
